--- a/layout_parts/q2/index.html
+++ b/layout_parts/q2/index.html
@@ -22,7 +22,7 @@
         <div class="q2__content__box">
           <div>
             <div class="q2__thumb__left is-left">
-              <img src="./img/thumb_1 10.06.40.jpg" alt width="200px" height="133px">
+              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg" alt width="200px" height="133px">
             </div>
             <p class=" q2__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -32,7 +32,7 @@
           </div>
           <div>
             <div class="q2__thumb__right is-right">
-              <img src="./img/thumb_2 10.06.39.jpg" alt width="200px" height="133px">
+              <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg" alt width="200px" height="133px">
             </div>
             <p class="q2__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
