--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -20,7 +20,7 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
+        <div class="q4 main-box">
           <div class="q4__contents">
             <div class="q4__contents__cell pink">固定</div>
             <div class="q4__contents__cell purple">可変</div>
