--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -24,8 +24,8 @@
           <div class="q6 q6--horizontal">
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-textalign">
-              <div class="q6__box__inner">
+            <div class="q6__box">
+              <div class="q6__box__inner first-box">
                 <p class="q6__box__text-left">text-align</p>
               </div>
             </div>
@@ -33,7 +33,7 @@
 
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-margin">
+            <div class="q6__box">
               <p class="q6__box__text-right">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -49,7 +49,7 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q6 q6--around is-table">
             <div class="q6__box-q2">
-              <p class="q6__box__text-top">table</p>
+              <p class="q6__box__text-table">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -58,7 +58,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q6 q6--around is-flex">
-            <p class="q6__box__text-under">flex</p>
+            <p class="q6__box__text-flex">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
@@ -66,16 +66,16 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable dog">
-              <p class="q6__box__inner dog-text">position固定</p>
+            <div class="q6__box is-stable is-relative">
+              <p class="q6__box__inner is-stable__text">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible cat">
-              <p class="q6__box__inner cat-text">position可変</p>
+            <div class="q6__box is-flexible is-flexible">
+              <p class="q6__box__inner is-flexible__text">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
