レイアウトパーツ前半完了、確認いただき済。

--- a/layout_parts/q2/index.html
+++ b/layout_parts/q2/index.html
@@ -21,7 +21,7 @@
         
         <div class="q2__content__box">
           <div>
-            <div class="q2__thumb__left is-left">
+            <div class="q2__thumb__left">
               <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg" alt="風船の画像です">
             </div>
             <p class=" q2__text">
@@ -31,7 +31,7 @@
             </p>
           </div>
           <div>
-            <div class="q2__thumb__right is-right">
+            <div class="q2__thumb__right">
               <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_2.jpg" alt="通路の画像です">
             </div>
             <p class="q2__text">
