【レイアウトパーツ後半】フィードバック後の修正点 ・Q7-1からQ7-4までの共通プロパティを別クラスに抜き出しています。 ・Q9：beforeとafterを新しい書き方に変更し、cssの記述を見直しました。 （※両者とも変更前の記述をコメントアウトにしています。）

--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -26,10 +26,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--float">
             <div class="q7__inner clearfix">
-              <div class="q7__box is-float">
+              <div class="q7__box is-float q7__box__common">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box is-float">
+              <div class="q7__box is-float q7__box__common">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -46,12 +46,12 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--table">
             <div class="q7__inner main-box">
-              <div class="q7__box is-left">
+              <div class="q7__box table__text__box q7__box__common">
                 <div class="q7__box__text is-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
-              <div class="q7__box is-right">
+              <div class="q7__box table__text__box q7__box__common">
                 <div class="q7__box__text is-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
@@ -70,10 +70,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
             <div class="q7__inner inline-main">
-              <div class="q7__box inline-box">
+              <div class="q7__box inline-box q7__box__common">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box inline-box">
+              <div class="q7__box inline-box q7__box__common">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -90,10 +90,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--flex">
             <div class="q7__inner flex-main">
-              <div class="q7__box flex-box__left">
+              <div class="q7__box flex-box__text q7__box__common">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box flex-box__right">
+              <div class="q7__box flex-box__text q7__box__common">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
